Re-add the throttle docker to 5.2

It's not very useful, but it uses QML, which apparently is enough
to make the initialization of the canvas work on Android...

BUG:488606